# daily_investor

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLEANUP_REPORT.md  Makefile  README.md  investments.yaml  pyproject.toml  vulture_whitelist.py
.hermes/plans/: 2026-05-31_163000-backtest-validation-overhaul.md
cfg/: config.yaml  config_baseline_current.yaml  config_momentum_anchor.yaml  config_quality_anchor.yaml  config_research_safe.yaml  ratios.yaml
docs/: odte_metrics_and_feedback.md  odte_universe_selection.md
reports/: contribution_dip_only_1250d.json  contribution_dip_only_compare.json  contribution_timing_compare.json  regime_sizing_neutral.csv  regime_sizing_neutral_live_baseline.csv  regime_sizing_neutral_oos_validation.csv  regime_sizing_neutral_oos_window_deltas.csv  robustness_report_2026-05-28.txt  stability_summary_2026-05-28.csv  validation_summary_2026-05-28.csv
reports/backtests/active_sleeve_compounding/: backtest_2026-05-28_20-44_227d8958525a_equity.csv  backtest_2026-05-28_20-44_227d8958525a_meta.json  backtest_2026-05-28_20-44_227d8958525a_metrics.csv  backtest_2026-05-28_20-44_227d8958525a_trades.csv  backtest_2026-05-28_21-32_5e7aeeea7b42_equity.csv  backtest_2026-05-28_21-32_5e7aeeea7b42_meta.json  backtest_2026-05-28_21-32_5e7aeeea7b42_metrics.csv  backtest_2026-05-28_21-32_5e7aeeea7b42_trades.csv  backtest_2026-05-28_21-36_5e7aeeea7b42_equity.csv  backtest_2026-05-28_21-36_5e7aeeea7b42_meta.json  backtest_2026-05-28_21-36_5e7aeeea7b42_metrics.csv  backtest_2026-05-28_21-36_5e7aeeea7b42_trades.csv  backtest_2026-05-28_21-48_5e7aeeea7b42_equity.csv  backtest_2026-05-28_21-48_5e7aeeea7b42_meta.json  backtest_2026-05-28_21-48_5e7aeeea7b42_metrics.csv  backtest_2026-05-28_21-48_5e7aeeea7b42_trades.csv  backtest_2026-05-28_22-36_018ff745622d_equity.csv  backtest_2026-05-28_22-36_018ff745622d_meta.json  backtest_2026-05-28_22-36_018ff745622d_metrics.csv  backtest_2026-05-28_22-36_018ff745622d_trades.csv  backtest_2026-05-28_22-37_018ff745622d_equity.csv  (+39 more)
reports/etf_leads/: etf_lead_0_baseline_core_dividend.npy  etf_lead_0_random_random_3.npy  etf_lead_1_random_random_0.npy  etf_lead_2_baseline_core_div_intl.npy  etf_lead_2_random_random_5.npy
reports/stability/: robustness_report_2026-05-25.txt  robustness_report_2026-05-27.txt  stability_summary_2026-05-25.csv  stability_summary_2026-05-27.csv  validation_summary_2026-05-25.csv  validation_summary_2026-05-27.csv
research/: portfolio_construction_exit_techniques.md
scripts/: active_sleeve_retire_diag.py  contribution_timing_compare.py  etf_alloc_baselines_diag.py  gauntlet_compare.py  pit_gates_off_diag.py  pit_incumbent_vs_momentum_diag.py  regime_sizing_random_window.py  sentiment_roi_analysis.py
src/: _reporting_legacy.py  backtest.py  main.py  reporting.py  sentiment_analysis.py  sentiments.py  source_data.py  tests.py  tuner.py  util.py
src/backtesting/: __init__.py  artifacts.py  cluster_tracker.py  data_loader.py  engine.py  pit_precompute.py  random_walk.py  regime_scope.py  reports.py  results.py  simulator.py  survivorship.py  types.py  validator.py
src/cli/: __init__.py  commands.py  main.py  migrate_scoring.py
src/config/: __init__.py  constants.py  manager.py  schema.py  validation.py
src/core/: __init__.py  exceptions.py  instruments.py  interfaces.py  logging.py  paths.py  types.py  utils.py
src/data/: __init__.py  cache.py  classification_arbiter.py  comention_graph.py  fmp_client.py  fmp_ops.py  fundamentals.py  instrument_resolver.py  market.py  market_structure.py  news.py  odte_candidate_watch.py  odte_concurrency.py  odte_day_score.py  odte_entry_gate.py  odte_fmp_context.py  odte_gamma_map.py  odte_journal.py  odte_loop_status.py  odte_options.py  odte_position.py  odte_vehicle_score.py  odte_watchdog.py  pit_fundamentals.py  sentiment.py  social_sentiment.py  universe.py  valuation.py
src/execution/: __init__.py  base.py  paper.py  robinhood.py
src/portfolio/: __init__.py  buy_context.py  contribution_timing.py  decision_adjustment_engine.py  decision_logger.py  etf_allocation.py  exit_analysis.py  harvest.py  manager.py  outcome_tracker.py  position_archetypes.py  position_journal.py  position_rationale.py  progress_tracker.py  risk.py  sell_engine.py  sizing.py  sleeve_tracker.py  thesis_confirm_tracker.py
src/reporting/: __init__.py  attribution.py  diagnostics.py  plots.py  position_watch.py
src/research/: __init__.py  decision_calibration.py  distribution_regime_analysis.py  ic_engine.py  pit_fundamentals.py  regime_sizing.py  single_stock_analyzer.py
src/strategy/: __init__.py  base.py  composite.py  factor_interactions.py  income.py  momentum.py  quality.py  snapshots.py  value.py  value_v2.py
src/tuning/: __init__.py  constants.py  etf_tune.py  gauntlet.py  interaction_screen.py  objective.py  presets.py  profiles.py  random_tune.py  reports.py  results.py  robust_scan.py  stability.py  staged_tune.py  tuner.py
src/ui/: __init__.py  streamlit_app.py  utils.py
src/ui/layout/: sidebar.py
tests/: conftest.py  test_active_presets.py  test_active_sleeve_accounting.py  test_active_sleeve_fund_filter.py  test_agg_snapshot_integrity.py  test_analyst_ratings_enrichment.py  test_archetype_classifier_diagnostics.py  test_archetype_policy_switches.py  test_archetypes.py  test_archetypes_first_class.py  test_architecture.py  test_backtest.py  test_backtest_exclusions.py  test_backtest_fixes.py  test_backtesting.py  test_buy_phase_efficiency.py  test_cache_na_ticker.py  test_classification_arbiter.py  test_classification_coverage.py  test_cli.py  test_cluster_enforcement.py  test_comention_graph.py  test_config.py  test_contribution_timing.py  test_dae_simulator_fidelity.py  test_defensive_stop_tighten.py  test_etf_allocation.py  test_execution.py  test_execution_fixes.py  test_exit_cadence.py  test_exit_thresholds.py  test_experiment_runner.py  test_factor_map_scope.py  test_falling_knife_guard.py  test_fmp_cache_freshness.py  test_fmp_ops.py  test_fmp_survivorship.py  test_fund_archetype.py  test_journal_isolation.py  test_live_execution_guards.py  (+43 more)
(+98 files in other folders)
