[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-investor"
version = "0.1.0"
description = "Robinhood systematic investment bot with momentum scoring, three-tier regime logic, and anti-lookahead backtesting"
requires-python = ">=3.10"
dependencies = [
    # HTTP / async
    "aiohttp>=3.9",
    "requests>=2.28",

    # Robinhood + market data
    "robin-stocks>=3.0",
    "yfinance>=0.2.30",

    # Numerics / data
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",

    # Graph analytics (news co-mention graph + structural signals)
    "networkx>=3.0",

    # Config / env
    "pyyaml>=6.0",
    "python-dotenv>=1.0",

    # Auth
    "pyotp>=2.8",

    # HTML parsing
    "beautifulsoup4>=4.12",

    # LLM stack
    "anthropic>=0.50",
    "langchain-anthropic>=1.0",
    "langchain-core>=1.0",
    "langgraph>=1.0",

    # Typing backport
    "typing_extensions>=4.0",
]

[project.optional-dependencies]
# Needed for stability-scan heatmaps (--stability-scan)
# Install: pip install "daily-investor[heatmaps]"
heatmaps = ["matplotlib>=3.5"]

ui = [
    "streamlit>=1.35",
    "plotly>=5.0",
    "scikit-learn>=1.3",
    "umap-learn>=0.5",
]

dev = [
    "pytest>=7.0",
    "matplotlib>=3.5",
    "streamlit>=1.35",
    "plotly>=5.0",
    # hygiene tools
    "ruff>=0.6",
    "mypy>=1.10",
    "vulture>=2.11",
    "radon>=6.0",
    "import-linter>=2.1",
    "pre-commit>=3.7",
]

[project.scripts]
daily-investor = "cli.main:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Primary test suite. Legacy: python3 -m pytest src/tests.py
testpaths = ["tests"]
python_files = ["test_*.py"]

# ---------------------------------------------------------------------------
# Ruff — linting and formatting
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py310"
line-length    = 100
src            = ["src"]
exclude        = ["build", ".venv", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (undefined names, unused imports)
    "I",   # isort
    "UP",  # pyupgrade (modern Python syntax)
    "B",   # flake8-bugbear (real bug patterns)
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long — formatter handles this
    "B008",   # function calls in default arg — used legitimately (e.g. field(default_factory=...))
    "UP006",  # use lowercase type[...] — some TYPE_CHECKING blocks need the old form
    "UP035",  # deprecated typing imports — handled incrementally
    # Noisy rules with high false-positive rate in this codebase:
    "RUF001", # ambiguous unicode character in string — financial text uses legitimate special chars
    "RUF002", # ambiguous unicode character in docstring
    "RUF003", # ambiguous unicode character in comment
    "B905",   # zip() without explicit strict= — stylistic; not a real bug here
    "RUF005", # collection literal concatenation — stylistic
    "RUF059", # unused unpacked variable — common intentional pattern (_)
]

[tool.ruff.lint.per-file-ignores]
"tests/*"       = ["PLR2004", "S101", "RUF012", "RUF015", "F821", "F841"]  # test fixtures use mutable defaults; magic values OK; some conditional imports
"src/util.py"   = ["F401", "F811"]    # re-export layer: intentional unused imports/redefinitions
"src/main.py"   = ["F401"]            # legacy entrypoint
"src/ui/*"      = ["E402", "F841", "B007", "B023", "E701", "E702"]  # Streamlit lazy-import patterns; UI style is less critical

[tool.ruff.lint.isort]
known-first-party = [
    "core", "backtesting", "strategy", "portfolio", "reporting",
    "research", "tuning", "config", "execution", "data", "ui", "cli",
]

# ---------------------------------------------------------------------------
# MyPy — type checking (non-strict start; expand exclude list incrementally)
# ---------------------------------------------------------------------------

[tool.mypy]
python_version         = "3.10"
mypy_path              = "src"
ignore_missing_imports = true
check_untyped_defs     = true
disallow_untyped_defs  = false   # non-strict: don't require annotations everywhere yet
warn_redundant_casts   = true
warn_unused_ignores    = true
no_implicit_reexport   = false
exclude = [
    "src/ui/",     # Streamlit components; hard to type cleanly
    "src/util.py", # compat re-export layer
    "src/main.py", # legacy entrypoint
]

[[tool.mypy.overrides]]
module = [
    "robin_stocks.*", "yfinance.*", "scipy.*",
    "sklearn.*", "umap.*", "langchain.*",
    "langgraph.*", "anthropic.*", "plotly.*",
    "streamlit.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Vulture — dead-code detection (advisory, not a blocking gate)
# ---------------------------------------------------------------------------

[tool.vulture]
min_confidence = 80
paths          = ["src", "vulture_whitelist.py"]

# ---------------------------------------------------------------------------
# Import-linter — layer boundary contracts
# ---------------------------------------------------------------------------

[tool.importlinter]
root_packages = [
    "backtesting", "cli", "config", "core", "data",
    "execution", "portfolio", "reporting", "research",
    "strategy", "tuning", "ui",
]
include_external_packages = false

[[tool.importlinter.contracts]]
name              = "core must not import domain logic"
type              = "forbidden"
source_modules    = ["core"]
forbidden_modules = [
    "ui", "backtesting", "portfolio", "strategy",
    "tuning", "reporting", "research", "execution", "data",
]

[[tool.importlinter.contracts]]
name              = "config must not import from domain layers"
type              = "forbidden"
source_modules    = ["config"]
forbidden_modules = [
    "ui", "portfolio", "backtesting", "strategy",
    "tuning", "reporting", "research", "execution",
]

[[tool.importlinter.contracts]]
name              = "data must not import from higher layers"
type              = "forbidden"
source_modules    = ["data"]
forbidden_modules = [
    "ui", "portfolio", "backtesting",
    "tuning", "reporting", "research",
]
# data.fundamentals calls strategy scoring functions when saving snapshots — known coupling,
# tracked as a future refactor (move score computation out of the data layer).
ignore_imports = [
    "data.fundamentals -> strategy.scoring.composite",
    "data.fundamentals -> strategy.snapshots",
]

[[tool.importlinter.contracts]]
name              = "execution must not import from higher layers"
type              = "forbidden"
source_modules    = ["execution"]
forbidden_modules = [
    "ui", "portfolio", "backtesting", "strategy",
    "tuning", "reporting", "research",
]
